--- a/jupyter notebook/Decision Tree.ipynb
+++ b/jupyter notebook/Decision Tree.ipynb
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<image src=\"../images/decisionTree.png\" width = \"300\" height = \"295\" alt=\"axis\" align=center />\n"
+       "<div align = \"center\"><image src=\"../images/decisionTree.png\" width = \"300\" height = \"295\" alt=\"axis\" align=center /></div>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -49,7 +49,7 @@
    ],
    "source": [
     "%%html\n",
-    "<image src=\"../images/decisionTree.png\" width = \"300\" height = \"295\" alt=\"axis\" align=center />"
+    "<div align = \"center\"><image src=\"../images/decisionTree.png\" width = \"300\" height = \"295\" alt=\"axis\" align=center /></div>"
    ]
   },
   {
