--- a/jupyter notebook/Decision Tree.ipynb
+++ b/jupyter notebook/Decision Tree.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "在介绍这几种决策树之前我们先引入一个**信息熵**的概念：\n",
     "\n",
-    "### [entropy](#content)\n",
+    "### [Entropy](#content)\n",
     "\n",
     "所谓的信息熵就是度量一个样本集合\"纯度/不确定度\"的指标，如何理解呢,我们来举个例子：\n",
     "\n",
