--- a/jupyter notebook/Decision Tree.ipynb
+++ b/jupyter notebook/Decision Tree.ipynb
@@ -219,9 +219,13 @@
     "\n",
     "显然根据纹理进行分割是信息增益最大的，故首先按照纹理来划分样本\n",
     "\n",
-    "![ID3](../images/ID3.png)\n",
+    "![ID3](../code/decisionTree/tree1.png)\n",
     "\n",
-    "之后按照这个规则继续分割，直到达到了停止条件则决策树完成创建。信息增益存在一个问题，那就是如果按照这种方法进行计算的话，那假如某个属性具有好多个取值，甚至是把编号作为属性了，按照这种情况计算就会导致决策树创建之后效果并不好，所以才引入了信息增益率也就是C4.5。\n",
+    "之后按照这个规则继续分割，直到达到了停止条件则决策树完成创建。\n",
+    "\n",
+    "![ID3](../code/decisionTree/tree2.png)\n",
+    "\n",
+    "信息增益存在一个问题，那就是如果按照这种方法进行计算的话，那假如某个属性具有好多个取值，甚至是把编号作为属性了，按照这种情况计算就会导致决策树创建之后效果并不好，所以才引入了信息增益率也就是C4.5。\n",
     "\n",
     "---\n",
     "\n",
