--- a/jupyter notebook/Decision Tree.ipynb
+++ b/jupyter notebook/Decision Tree.ipynb
@@ -315,6 +315,7 @@
     "显然根据纹理进行分割是信息增益最大的，故首先按照纹理来划分样本\n",
     "\n",
     "![ID3](../code/C4.5/tree1.png)\n",
+    "![ID3](../images/id3_1.png)\n",
     "\n",
     "之后按照这个规则继续分割，直到达到了停止条件则决策树完成创建。\n",
     "\n",
